WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36163
Garbage shown outside HTML if HTML is absolutely positioned
https://bugs.webkit.org/show_bug.cgi?id=36163
Summary
Garbage shown outside HTML if HTML is absolutely positioned
Yuzo Fujishima
Reported
2010-03-16 04:40:09 PDT
Created
attachment 50782
[details]
Screenshot When HTML element is absolutely positioned, garbage can be shown outside HTML. What steps will reproduce the problem? 1. Open the attached abs-pos-html.html. (Any HTML document where HTML element is absolutely positioned should do.) 2. Resize the browser a few times. 3. Observe the area outside of HTML, i.e., outside the red box. What is the expected output? What do you see instead? The page should be rendered cleanly. Instead, the area outside the red box contains garbages, e.g., gray lines. Please see the attached screenshot. Firefox 3.6 and Opera 10.10 draws cleanly on OS X 10.5.8 and Vista SP1. IE8 puts HTML at (0, 0), i.e., ignores the position property. Both WebKit 455974 and Chrome 5.0.307.11 beta fail.
Attachments
Screenshot
(14.43 KB, image/png)
2010-03-16 04:40 PDT
,
Yuzo Fujishima
no flags
Details
Testcase
(194 bytes, text/html)
2010-03-16 04:40 PDT
,
Yuzo Fujishima
no flags
Details
Patch
(12.23 KB, patch)
2010-06-15 14:42 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuzo Fujishima
Comment 1
2010-03-16 04:40:50 PDT
Created
attachment 50783
[details]
Testcase Open this file and try resizing the window a few times.
mitz
Comment 2
2010-03-16 07:40:50 PDT
See also
bug 8423
.
Simon Fraser (smfr)
Comment 3
2010-06-15 13:38:23 PDT
***
Bug 38966
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 4
2010-06-15 14:42:47 PDT
Created
attachment 58819
[details]
Patch
Dave Hyatt
Comment 5
2010-06-15 14:45:32 PDT
Comment on
attachment 58819
[details]
Patch r=me
Simon Fraser (smfr)
Comment 6
2010-06-15 15:01:07 PDT
http://trac.webkit.org/changeset/61215
WebKit Review Bot
Comment 7
2010-06-15 15:18:23 PDT
http://trac.webkit.org/changeset/61215
might have broken GTK Linux 64-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/61214
http://trac.webkit.org/changeset/61215
Simon Fraser (smfr)
Comment 8
2010-06-15 16:43:26 PDT
Followup fix in
http://trac.webkit.org/changeset/61226
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug